<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/player_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000" >

    <!-- The bottom layer is SurfaceView -->

    <SurfaceView
        android:id="@+id/player_surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="visible" />

    <!-- The backgroun layer is on the top of SurfaceView -->

    <ImageView
        android:id="@+id/local_audio_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true" />

    <!-- And the other layers -->

    <RelativeLayout
        android:id="@+id/playbar_container"
        android:layout_width="990dp"
        android:layout_height="82dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:background="@drawable/player_bar"
        android:visibility="invisible" >
    </RelativeLayout>

    <ImageView
        android:id="@+id/local_audio_album_cover"
        android:layout_width="362dp"
        android:layout_height="543dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="95dp"
        android:scaleType="centerCrop"
        android:src="@drawable/local_audio_album" />

    <ImageView
        android:id="@+id/player_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/player_pause"
        android:visibility="invisible" />



    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="363dp"
        android:layout_height="405dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="51dp"
        android:layout_marginTop="115dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/local_audio_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/value_blank"
            android:textSize="@dimen/text_size_xl"
            android:color="#ffffffff" />

        <TextView
            android:id="@+id/local_audio_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:singleLine="true"
            android:text="@string/value_blank"
            android:textSize="@dimen/text_size_s"
            android:color="#ffffffff" />

        <TextView
            android:id="@+id/local_audio_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:singleLine="true"
            android:text="@string/value_blank"
            android:textSize="@dimen/text_size_s"
            android:color="#ffffffff" />

        <TextView
            android:id="@+id/local_audio_next_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:singleLine="true"
            android:text="@string/next_song"
            android:textSize="@dimen/text_size_s"
            android:color="#ffffffff" />

        <TextView
            android:id="@+id/local_audio_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:singleLine="true"
            android:text="@string/value_blank"
            android:textSize="@dimen/text_size_s"
            android:color="#ffffffff" />
    </LinearLayout>

    <TextView
        android:id="@+id/local_audio_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/player_pause"
        android:layout_alignRight="@+id/player_pause"
        android:layout_marginTop="495dp"
        android:background="#00000000"
        android:gravity="right|center_vertical"
        android:singleLine="true"
        android:text="@string/value_blank"
        android:textSize="@dimen/text_size_s" />

    <TextView
        android:id="@+id/local_audio_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/local_audio_album_cover"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/audio_operation_tip"
        android:textColor="#3ffffffe"
        android:textSize="@dimen/text_size_s" />

    <RelativeLayout
        android:id="@+id/state_tip"
        style="@style/SmallDialog"
        android:layout_centerInParent="true"
        android:background="@drawable/common_dialog_bg"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/state_tip_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/text_padding_m"
            android:layout_marginRight="@dimen/text_padding_m"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/value_blank"
            android:textSize="@dimen/text_size_xxl" />

        <TextView
            android:id="@+id/state_tip_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/state_tip_text1"
            android:layout_marginLeft="@dimen/text_padding_m"
            android:layout_marginRight="@dimen/text_padding_m"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/msg_media_unsupported"
            android:textSize="@dimen/text_size_xxl" />
    </RelativeLayout>

</RelativeLayout>